fixed overflowing board

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 600px) {
   #board {
-    height: 80%;
+    height: 75%;
     width: 40%;
   }
   #main {
